--- a/payment.css
+++ b/payment.css
@@ -3,7 +3,7 @@ html{
 }
 
 body{
-    background-image: url(https://images.unsplash.com/photo-1600007283728-22abc97b9318?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80);
+    background-image: url(https://images.unsplash.com/photo-1565371767810-ef913a6c8315?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aW5kaWFuJTIwY3VycmVuY3l8ZW58MHwwfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60);
     background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
